# controllers/boardingController.js
@@ -14,6 +14,7 @@ const createBoarding = asyncHandler(async (req, res) => {
         boardingType,
         stayPreference,
         boardingPic,
+        location,
         facilities,
         membersCount,
         noOfRooms,
@@ -31,6 +32,7 @@ const createBoarding = asyncHandler(async (req, res) => {
         ownerName,
         ownerNIC,
         street,
+        location,
         city,
         district,
         province,
