# swagger-output.json
@@ -354,6 +354,12 @@
                 "stayPreference": {
                   "example": "any"
                 },
+                "boardingPic": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
                 "facilities": {
                   "example": "any"
                 },
@@ -470,6 +476,9 @@
                 "boardingType": {
                   "example": "any"
                 },
+                "boardingPic": {
+                  "example": "any"
+                },
                 "stayPreference": {
                   "example": "any"
                 },
@@ -555,6 +564,9 @@
                   "example": "any"
                 },
                 "boardingType": {
+                  "example": "any"
+                },
+                "boardingPic": {
                   "example": "any"
                 },
                 "stayPreference": {
@@ -905,6 +917,176 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/university/createUniversity": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "universityName": {
+                  "example": "any"
+                },
+                "district": {
+                  "example": "any"
+                },
+                "universityImg": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/university/getAllUniversity": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/university/getOneUniversity/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "universityName": {
+                  "example": "any"
+                },
+                "district": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "universityImg": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/university/editUniversity/{id}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "universityName": {
+                  "example": "any"
+                },
+                "district": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "universityImg": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/university/deleteUniversity/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
